openldap/yaml/openldap-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: openldap
  name: openldap
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      hostname: openldap
      containers:
      - env:
        - name: LDAP_ADMIN_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: ADMIN_PASSWORD
              name: openldap
        - name: LDAP_BASE_DN
          valueFrom:
            configMapKeyRef:
              key: BASE_DN
              name: openldap
        - name: LDAP_DOMAIN
          valueFrom:
            configMapKeyRef:
              key: DOMAIN
              name: openldap
        - name: LDAP_ORGANISATION
          valueFrom:
            configMapKeyRef:
              key: ORGANISATION
              name: openldap
        - name: LDAP_TLS
          value: "true"
        - name: LDAP_LOG_LEVEL
          value: "256"
        image: docker.io/osixia/openldap:<OPENLDAP_VER>
        imagePullPolicy: IfNotPresent
        name: openldap
        ports:
        - containerPort: 389
          protocol: TCP
        - containerPort: 636
          protocol: TCP
        volumeMounts:
        - name: openldapdata
          mountPath: /var/lib/ldap
        - name: openldapconfig
          mountPath: /etc/ldap/slapd.d
        - name: openldapcerts
          mountPath: /container/service/slapd/assets/certs
      serviceAccount: openldap
      serviceAccountName: openldap
      imagePullSecrets:
      - name: "<PULL_SECRET>"
      volumes:
      - name: openldapdata
        persistentVolumeClaim:
          claimName: openldap-data
      - name: openldapconfig
        persistentVolumeClaim:
          claimName: openldap-config
      - name: openldapcerts
        persistentVolumeClaim:
          claimName: openldap-certs
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openldap
  name: openldap
spec:
  ports:
  - name: port-1
    port: 389
    protocol: TCP
    targetPort: 389
  - name: port-2
    port: 636
    protocol: TCP
    targetPort: 636
  selector:
    app: openldap
  sessionAffinity: None
  type: ClusterIP
