openldap/yaml/openldapadmin-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openldapadmin
  name: openldapadmin
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: openldapadmin
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: openldapadmin
    spec:
      hostname: openldapadmin
      containers:
      - env:
        - name: PHPLDAPADMIN_LDAP_HOSTS
          value: openldap
        image: docker.io/osixia/phpldapadmin:0.9.0
        imagePullPolicy: IfNotPresent
        name: openldapadmin
        ports:
        - containerPort: 443
          protocol: TCP
        - containerPort: 80
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /var/www/phpldapadmin
          name: openldapadmin-1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: openldap
      serviceAccountName: openldap
      imagePullSecrets:
      - name: <PULL_SECRET>
      volumes:
      - emptyDir: {}
        name: openldapadmin-1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openldapadmin
  name: openldapadmin
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: openldapadmin
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: openldapadmin
  name: openldapadmin
spec:
  port:
    targetPort: https
  to:
    kind: Service
    name: openldapadmin
    weight: 100
  wildcardPolicy: None
  tls:
    termination: passthrough
